--- a/ProyectoDesarrollo/src/Vista/Master_Teacher/PanelAsistencia.form
+++ b/ProyectoDesarrollo/src/Vista/Master_Teacher/PanelAsistencia.form
@@ -91,7 +91,7 @@
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButtonGuardarAsistencia" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -128,7 +128,7 @@
                       <Component id="jCheckBox1" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButtonGuardarAsistencia" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -224,10 +224,13 @@
             <Property name="text" type="java.lang.String" value="Asistio"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="jButtonGuardarAsistencia">
           <Properties>
             <Property name="text" type="java.lang.String" value="Guardar Asistencia"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonGuardarAsistenciaActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
